--- a/rainworldmod.csproj
+++ b/rainworldmod.csproj
@@ -74,14 +74,14 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="lib\BepInEx.dll">
+    <None Include="lib\BepInEx.dll">
       <CustomToolNamespace>rainworldmod</CustomToolNamespace>
-    </Content>
-    <Content Include="lib\HOOKS-Assembly-CSharp.dll" />
-    <Content Include="lib\Newtonsoft.Json.dll" />
-    <Content Include="lib\PUBLIC-Assembly-CSharp.dll" />
-    <Content Include="lib\UnityEngine.CoreModule.dll" />
-    <Content Include="lib\UnityEngine.dll" />
+    </None>
+    <None Include="lib\HOOKS-Assembly-CSharp.dll" />
+    <None Include="lib\Newtonsoft.Json.dll" />
+    <None Include="lib\PUBLIC-Assembly-CSharp.dll" />
+    <None Include="lib\UnityEngine.CoreModule.dll" />
+    <None Include="lib\UnityEngine.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
